--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -10,7 +10,7 @@
     <title>Pizzamigo</title>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-secondary">
+    <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,6 +76,7 @@
         <div class="row">
           <span class="text-center text-light">Creado por <a class="footer" href="https://www.instagram.com/fedex_rater/">Federico Hidalgo</a></span>
         </div>
+    </footer>
       <script src="./js/menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
