--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/pizza.css"> -->
     <link rel="stylesheet" href="./css/desayuno.css">
     <title>Pizza</title>
 </head>
@@ -33,7 +34,7 @@
           <div class="container-fluid text-light texto">
             <div class="row mt-5">
               <div class="col-8"> 
-                <h2 class="text-center">TRADICIONAL:</h2>
+                <h2 class="marco text-center">TRADICIONAL:</h2>
                 <p>Infusión + 2 Medialunas o Tortillas + Soda y Jugo</p>
               </div>
               <div class="col-4">
@@ -45,13 +46,13 @@
                 <!-- imagen del desayuno -->
               </div>
               <div class="col-8 ">
-                <h2 class="text-center">CONTINENTAL:</h2>
+                <h2 class="marco text-center">CONTINENTAL:</h2>
                 <p class="text-end">Infusión + Pan de campo + Manteca + Mermelada ó Dulce de Leche + Ens. de Fruta + Soda y Jugo.</p>
               </div>
             </div>
             <div class="row mt-5">
               <div class="col-8"> 
-                <h2 class="text-center">AMERICANO:</h2>
+                <h2 class="marco text-center">AMERICANO:</h2>
                 <p>Infusión + 2 Pan de campo + Huevo Revuelto + Panceta + Ens. de Frutas + Soda y Jugo.</p>
               </div>
               <div class="col-4">
@@ -63,13 +64,13 @@
                 <!-- imagen del desayuno -->
               </div>
               <div class="col-8 ">
-                <h2 class="text-center">PROTEICO:</h2>
+                <h2 class="marco text-center">PROTEICO:</h2>
                 <p class="text-end">Infusión + 2 Pan de Campo + Huevo Revuelto + Palta + Ens. de Fruta + Soda y Jugo</p>
               </div>
             </div>
             <div class="row mt-5">
               <div class="col-8"> 
-                <h2 class="text-center">Jamón y Queso:</h2>
+                <h2 class="marco text-center">Jamón y Queso:</h2>
                 <span>Infusión + 2 Medialunas de Jamón y Queso + Soda y Jugo</span>
               </div>
               <div class="col-4">
@@ -81,7 +82,7 @@
                 <!-- imagen del desayuno -->
               </div>
               <div class="col-8 ">
-                <h2 class="text-center">PARA COMPARTIR:</h2>
+                <h2 class="marco text-center">PARA COMPARTIR:</h2>
                 <p class="text-end"> 2 Infusión + 2 Medialunas + 4 Tostadas de Campo + Jámon y Queso + Mermelada + Manteca + 2 Ens. de Frutas + Soda y Jugo</p>
               </div>
             </div>
@@ -146,9 +147,67 @@
               </div>
             </div>
             <!-- cafeteria -->
-            <div class="row mt-5">
-              <div class="col"></div>
-            </div>
+              <div class="row mt-5">
+                <div class="col-12 cafeteria"> 
+                  <h2 class="text-end  mt-4">CAFETERIA</h2>
+              </div>
+              <div class="row mt-5">
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">MEDIALUNAS</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">CRIOLLO</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">MEDIALUNAS JYQ</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">TOSTADAS DE CAMPO X2</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">MANTECA Y MERMELADA O QUESO</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">HUEVO REVUELTO</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">CAZUELA PALTA</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">JAMÓN Y QUESO</p>
+                </div>
+                <div class="col-6 mt-5">
+                  <!-- precio -->
+                </div>
+                <div class="col-6 mt-5">
+                  <p class="text-end">MIXTO DE JYQ</p>
+                </div>
+              </div>
+
           </div>
 
 
