--- a/menu-pizzamigo/web/bebidas.html
+++ b/menu-pizzamigo/web/bebidas.html
@@ -19,12 +19,13 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                  <a class="nav-link" href="pizza.html">Pizza</a>
-                  <a class="nav-link" href="desayuno.html">Desayuno/Merienda</a>
-                  <a class="nav-link" href="plato.html">Al plato</a>
-                  <a class="nav-link" href="bebidas.html">Bebidas</a>
-                  <a class="nav-link" href="postres.html">Postre</a>
+                  <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link text-light" href="pizza.html">Pizza</a>
+                  <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
+                  <a class="nav-link text-light" href="plato.html">Al plato</a>
+                  <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
+                  <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+                  <a class="nav-link text-light" href="postres.html">Postre</a>
                 </div>
               </div>
             </div>
