--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -24,6 +24,7 @@
                   <a class="nav-link text-light" href="#">Pizza</a>
                   <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
                   <a class="nav-link text-light" href="plato.html">Al plato</a>
+                  <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
                   <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
                   <a class="nav-link text-light" href="postres.html">Postre</a>
                 </div>
@@ -175,6 +176,9 @@
 
           </div>
         </div>
+
+        <!-- pie de pagina -->
+
         <footer class="mt-5 container-fluid mb-5">
           <div class="row">
             <span class="text-light text-center">Copyright 2023</span>
