--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -18,12 +18,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              <a class="nav-link" href="pizza.html">Pizza</a>
-              <a class="nav-link" href="desayuno.html">Desayuno/Merienda</a>
-              <a class="nav-link" href="plato.html">Al plato</a>
-              <a class="nav-link" href="bebidas.html">Bebidas</a>
-              <a class="nav-link" href="postres.html">Postre</a>
+              <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link text-light" href="pizza.html">Pizza</a>
+              <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
+              <a class="nav-link text-light" href="plato.html">Al plato</a>
+              <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
+              <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+              <a class="nav-link text-light" href="postres.html">Postre</a>
+
             </div>
           </div>
         </div>
@@ -51,6 +53,13 @@
             </div>
             <div class="col-12 text-center text-light">
                 <span class="texto">Al plato</span>
+
+            </div>
+            <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
+              <a href="ensalada.html">  <img class="redo" src="../pizza.jpg" alt="ensalada" srcset=""> </a>
+            </div>
+            <div class="col-12 text-center">
+                <span class="texto text-light ">Ensalada</span> 
 
             </div>
             <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
