--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -9,8 +9,6 @@
     <title>Pizza</title>
 </head>
 <body>
-
-    <body>
         <nav class="navbar sticky-top navbar-expand-lg bg-secondary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
@@ -19,21 +17,20 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                  <a class="nav-link" href="pizza.html">Pizza</a>
-                  <a class="nav-link" href="desayuno.html">Desayuno/Merienda</a>
-                  <a class="nav-link" href="plato.html">Al plato</a>
-                  <a class="nav-link" href="bebidas.html">Bebidas</a>
-                  <a class="nav-link" href="postres.html">Postre</a>
+                  <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link text-light" href="pizza.html">Pizza</a>
+                  <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
+                  <a class="nav-link text-light" href="plato.html">Al plato</a>
+                  <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
+                  <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+                  <a class="nav-link text-light" href="postres.html">Postre</a>
                 </div>
               </div>
             </div>
-          </nav>
-
-
+        </nav>
+        <!-- fin de la barra de nav -->
           <!-- link js -->
           <script src="./js/menu.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-      </body>
 </body>
 </html>
