--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -33,6 +33,9 @@
             </div>
           </nav>
           <div class="container-fluid text-light texto">
+            <div class="row tablas mt-2">
+                <h1 class="text-end titulo2">TABLAS</h1>
+            </div>
             <div class="row mt-5">
               <div class="col-8"> 
                 <h2 class="marco text-center">TRADICIONAL:</h2>
