--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/pizza.css">
     <title>Pizza</title>
 </head>
 <body>
-        <nav class="navbar sticky-top navbar-expand-lg bg-secondary">
+        <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,10 +18,10 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link text-light active" aria-current="page" href="index.html">Inicio</a>
                   <a class="nav-link text-light" href="pizza.html">Pizza</a>
                   <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
-                  <a class="nav-link text-light" href="plato.html">Al plato</a>
+                  <a class="nav-link text-light" href="#">Al plato</a>
                   <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
                   <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
                   <a class="nav-link text-light" href="postres.html">Postre</a>
@@ -29,6 +30,96 @@
             </div>
         </nav>
         <!-- fin de la barra de nav -->
+
+        <div class="container-fluid texto text-light">
+          <h1 class="titulo mt-5 text-center">Al plato</h1>
+          <div class="row mt-5">
+            <div class="col-6">
+              <h2 class="marco  text-center">ENTRADAS</h2>
+              <h3>EMPANADAS:</h3>
+              <p>Carne / Pollo</p>
+              <p>Árabe / Queso</p>
+              <p>Jamón y Queso</p>
+              <p>Tamales</p>
+              <p>Humita Dulce / Salada</p>
+            </div>
+            <div class="col-6">
+              <!-- imagenes de los precios -->
+            </div>
+            <div class="col-4">
+              <!-- imagenes del precio -->
+            </div>
+            <div class="col-8">
+              <h3 class="marco text-center">PICADAS</h3>
+              <p class="text-end mt-5">Árabe para 2 personas: <br>Tripa Rellena<br> Niños Envueltos<br> Empanadas Árabes y Tabbule</p>
+              <p class="text-end mt-5">Tacos mixtos c/4 Salsas</p>
+              <p class="text-end mt-5">Tabla de Fiambres</p>
+            </div>
+            <div class="col-6 mt-5">
+              <h2 class="marco  text-center">AL PLATO</h2>
+              <p class="mt-5 ">Mila Completa</p>
+              <p class="mt-5 ">Bife de Lomo con Fritas</p>
+              <p class="mt-5 ">Napolitana c/Guarnición</p>
+              <p class="mt-5 ">Costillitas a la Barbacoa c/Papas Bravas</p>
+              <p class="mt-5 ">Bife de Pollo c/Guarnición</p>
+              <p class="mt-5 ">Lomo a la Frontera</p>
+              <p class="mt-5 ">Lomo al Champignon</p>
+              <p class="mt-5 ">Pollo al Champignon</p>
+              <p class="mt-5 ">Brochet Mixto</p>
+            </div>
+            <div class="col-6 mt-5">
+              <!-- aca van los precios -->
+            </div>
+            <div class="col-6 mt-5">
+              <!-- precios -->
+            </div>
+            <div class="col-6 mt-5">
+              <h2 class="marco titulo text-center">Pastas</h2>
+              <p class="mt-5 text-end">Tallarines</p>
+              <p class="mt-5 text-end">Ravioles</p>
+              <p class="mt-5 text-end">Sorrentinos</p>
+              <p class="mt-5 text-end">Agnolottis</p>
+              <p class="mt-5 text-end">Ñoquis</p>
+            </div>
+            <div class="col-6">
+              <h2 class="marco text-center mt-5">SALSAS</h2>
+              <p class="mt-5">Bolognesa</p>
+              <p class="mt-5">Mixta</p>
+              <p class="mt-5">Blanca</p>
+              <p class="mt-5">Fileto</p>
+            </div>
+            <div class="col-6 mt-5">
+              <!-- precios -->
+            </div>
+            <div class="col-6">
+              <!-- precios -->
+            </div>
+            <div class="col-6">
+              <h2 class="marco text-center">POSTRES</h2>
+              <p class="mt-5 text-end">Flan</p>
+              <p class="mt-5 text-end">Budín de pan</p>
+              <p class="mt-5 text-end">Helado</p>
+              <p class="mt-5 text-end">Ensalada de Frutas</p>
+              <p class="mt-5 text-end">Shot de Postres</p>
+              <p class="mt-5 text-end">Quesillo c/ Cayote</p>
+              <p class="mt-5 text-end">Batatita en Almíbar</p>
+              <p class="mt-5 text-end">Coreanito en Almíbar</p>
+
+            </div>
+          </div>
+        </div>
+
+
+        <!-- pie de pagina -->
+        <footer class="mt-5 container-fluid mb-5">
+          <div class="row">
+            <span class="text-light text-center">Copyright 2023</span>
+          </div>
+          <div class="row">
+            <span class="text-center text-light">Creado por <a class="footer" href="https://www.instagram.com/fedex_rater/">Federico Hidalgo</a></span>
+          </div>
+      </footer>
+
           <!-- link js -->
           <script src="./js/menu.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
