--- a/menu-pizzamigo/web/ensalada.html
+++ b/menu-pizzamigo/web/ensalada.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/pizza.css">
+    <link rel="stylesheet" href="./css/ensalada.css">
     <title>Ensalada</title>
 </head>
 <body>
@@ -19,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ">
              <a class="nav-link text-light active" aria-current="page" href="./index.html">Inicio</a>
-             <a class="nav-link text-light" href="#">Pizza</a>
+             <a class="nav-link text-light" href="pizza.html">Pizza</a>
              <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
              <a class="nav-link text-light" href="plato.html">Al plato</a>
-             <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
+             <a class="nav-link text-light" href="#">Ensaladas</a>
              <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
              <a class="nav-link text-light" href="postres.html">Postre</a>
           </div>
@@ -30,12 +31,78 @@
     </div>
  </nav>
  <!-- fin de barra -->
-<div class="container-fluid"></div>
-
-
-
-
-
+<div class="container-fluid text-light texto">
+  
+  <div class="row mt-1 ensalada">
+    <!-- banner de ensalada -->
+    <div class="col-12 ">
+      <h1 class="mt-5 titulo">ENSALADA</h1>
+    </div>
+    <!-- fin de banner -->
+  </div>
+  <div class="row">
+    <div class="col-12 mt-5 text-center">
+      <p>ARMA TU PROPIA ENSALADA CON 6 VARIEDADES A GUSTO</p>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-6">
+      <h2 class="marco text-center">VEGETALES</h2>
+      <p>Pepino</p>
+      <p>Palta</p>
+      <p>Lechuga</p>
+      <p>Escarolla</p>
+      <p>Apio</p>
+      <p>Espinaca</p>
+      <p>Remolacha</p>
+      <p>Zanahoria</p>
+      <p>Repollo</p>
+      <p>Rúcula</p>
+      <p>Achicora</p>
+      <p>Tomate</p>
+      <p>Tomate Cherry</p>
+      <p>Cebolla</p>
+    </div>
+    <div class="col-6 text-end">
+      <h2 class="marco text-center">LEGUMBRES</h2>
+      <p>Nuez</p>
+      <p>Porotos</p>
+      <p>Mote</p>
+      <p>Maíz</p>
+      <p>Lenteja</p>
+      <p>Quinoa</p>
+      <p>Arveja</p>
+      <p>Semilla de Sésamo</p>
+      <p>Semilla de Chia</p>
+      <p>Semilla de Amapola</p>
+    </div>
+    <div class="col-6 mt-5">
+      <h2 class="marco text-center">CARNES</h2>
+      <p>Ternera</p>
+      <p>Pollo</p>
+      <p>Atún</p>
+      <p>Jamón</p>
+      <p>Jamón Crudo</p>
+      <p>Queso Tibo</p>
+      <p>Queso Sardo</p>
+      <p>Queso Roquefort</p>
+    </div>
+    <div class="col-6 text-end mt-5">
+      <h2 class="marco text-center">HERVIDAS</h2>
+      <p>Brócoli</p>
+      <p>Papa</p>
+      <p>Remolacha</p>
+      <p>Zanahoria</p>
+      <p>Repollo</p>
+      <p>Huevo</p>
+      <p>Acelga</p>
+      <p>Zapallito</p>
+      <p>Coreanito</p>
+      <p>Berenjena</p>
+      <p>Choclo</p>  
+    </div>
+  </div>
+</div>
 
  <!-- pie de pagina -->
 
