--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -56,7 +56,7 @@
 
             </div>
             <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
-              <a href="ensalada.html">  <img class="redo" src="../pizza.jpg" alt="ensalada" srcset=""> </a>
+              <a href="ensalada.html">  <img class="redo" src="../ensalada.jpg" alt="ensalada" srcset=""> </a>
             </div>
             <div class="col-12 text-center">
                 <span class="texto text-light ">Ensalada</span> 
