--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -45,7 +45,7 @@
                 <a href="desayuno.html"><img class="redo" src="../desa.png" alt="desayuno" srcset=""></a>
             </div>
             <div class="col-12 text-center text-light">
-                <span class="texto">Merienda/Desayuno</span>
+                <span class="texto">Desayuno/Merienda</span>
 
             </div>
             <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
@@ -63,14 +63,14 @@
 
             </div>
             <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-              <img class="redo" src="../bebidas.jpg" alt="Bebidas" srcset="">
+             <a href="bebidas.html"> <img class="redo" src="../bebidas.jpg" alt="Bebidas" srcset=""></a>
            </div>
            <div class="col-12 text-center text-light">
                <span class="texto">Bebidas</span>
 
            </div>
            <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-            <img class="redo" src="../postres.png" alt="Postres" srcset="">
+            <a href="postres.html"> <img class="redo" src="../postres.png" alt="Postres" srcset=""></a>
          </div>
          <div class="col-12 text-center text-light">
              <span class="texto">Postre</span>
