--- a/menu-pizzamigo/web/bebidas.html
+++ b/menu-pizzamigo/web/bebidas.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Pizza</title>
+    <title>Bebidas</title>
 </head>
 <body>
 
     <body>
-        <nav class="navbar sticky-top navbar-expand-lg bg-secondary">
+        <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,12 +19,12 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link text-light active" aria-current="page" href="index.html">Inicio</a>
                   <a class="nav-link text-light" href="pizza.html">Pizza</a>
                   <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
                   <a class="nav-link text-light" href="plato.html">Al plato</a>
                   <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
-                  <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+                  <a class="nav-link text-light" href="#">Bebidas</a>
                   <a class="nav-link text-light" href="postres.html">Postre</a>
                 </div>
               </div>
@@ -32,6 +32,16 @@
           </nav>
 
 
+
+          <!-- pie de pagina -->
+          <footer class="mt-5 container-fluid mb-5">
+            <div class="row">
+              <span class="text-light text-center">Copyright 2023</span>
+            </div>
+            <div class="row">
+              <span class="text-center text-light">Creado por <a class="footer" href="https://www.instagram.com/fedex_rater/">Federico Hidalgo</a></span>
+            </div>
+        </footer>
           <!-- link js -->
           <script src="./js/menu.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
