--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/pizza.css">
+    <link rel="stylesheet" href="./css/plato.css">
     <title>Pizza</title>
 </head>
 <body>
@@ -32,19 +33,27 @@
         <!-- fin de la barra de nav -->
 
         <div class="container-fluid texto text-light">
-          <h1 class="titulo mt-5 text-center">Al plato</h1>
+          <div class="row fondo mt-3">
+            <h1 class="titulo mt-1 titulo2">Al plato</h1>
+
+          </div>
           <div class="row mt-5">
             <div class="col-6">
               <h2 class="marco  text-center">ENTRADAS</h2>
+            </div>
+            <div class="col-6"></div>
+            <div class="col-6  text-center">
               <h3>EMPANADAS:</h3>
+            </div>
+            <div class="col-6 text-center  ">
+              <img class="precio"  src="../precio-sin-num.png" alt="precio" srcset="">
+            </div>
+            <div class="col-6">
               <p>Carne / Pollo</p>
               <p>Árabe / Queso</p>
               <p>Jamón y Queso</p>
               <p>Tamales</p>
               <p>Humita Dulce / Salada</p>
-            </div>
-            <div class="col-6">
-              <!-- imagenes de los precios -->
             </div>
             <div class="col-4">
               <!-- imagenes del precio -->
