--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -33,91 +33,209 @@
         <!-- fin de la barra de nav -->
 
         <div class="container-fluid texto text-light">
-          <div class="row fondo mt-3">
-            <h1 class="titulo mt-1 titulo2">Al plato</h1>
-
-          </div>
-          <div class="row mt-5">
-            <div class="col-6">
-              <h2 class="marco  text-center">ENTRADAS</h2>
-            </div>
-            <div class="col-6"></div>
-            <div class="col-6  text-center">
-              <h3>EMPANADAS:</h3>
-            </div>
-            <div class="col-6 text-center  ">
-              <img class="precio"  src="../precio-sin-num.png" alt="precio" srcset="">
-            </div>
-            <div class="col-6">
-              <p>Carne / Pollo</p>
-              <p>Árabe / Queso</p>
-              <p>Jamón y Queso</p>
-              <p>Tamales</p>
-              <p>Humita Dulce / Salada</p>
-            </div>
-            <div class="col-4">
-              <!-- imagenes del precio -->
-            </div>
-            <div class="col-8">
-              <h3 class="marco text-center">PICADAS</h3>
-              <p class="text-end mt-5">Árabe para 2 personas: <br>Tripa Rellena<br> Niños Envueltos<br> Empanadas Árabes y Tabbule</p>
-              <p class="text-end mt-5">Tacos mixtos c/4 Salsas</p>
-              <p class="text-end mt-5">Tabla de Fiambres</p>
-            </div>
-            <div class="col-6 mt-5">
-              <h2 class="marco  text-center">AL PLATO</h2>
-              <p class="mt-5 ">Mila Completa</p>
-              <p class="mt-5 ">Bife de Lomo con Fritas</p>
-              <p class="mt-5 ">Napolitana c/Guarnición</p>
-              <p class="mt-5 ">Costillitas a la Barbacoa c/Papas Bravas</p>
-              <p class="mt-5 ">Bife de Pollo c/Guarnición</p>
-              <p class="mt-5 ">Lomo a la Frontera</p>
-              <p class="mt-5 ">Lomo al Champignon</p>
-              <p class="mt-5 ">Pollo al Champignon</p>
-              <p class="mt-5 ">Brochet Mixto</p>
-            </div>
-            <div class="col-6 mt-5">
-              <!-- aca van los precios -->
-            </div>
-            <div class="col-6 mt-5">
-              <!-- precios -->
-            </div>
-            <div class="col-6 mt-5">
-              <h2 class="marco titulo text-center">Pastas</h2>
-              <p class="mt-5 text-end">Tallarines</p>
-              <p class="mt-5 text-end">Ravioles</p>
-              <p class="mt-5 text-end">Sorrentinos</p>
-              <p class="mt-5 text-end">Agnolottis</p>
-              <p class="mt-5 text-end">Ñoquis</p>
-            </div>
-            <div class="col-6">
-              <h2 class="marco text-center mt-5">SALSAS</h2>
-              <p class="mt-5">Bolognesa</p>
-              <p class="mt-5">Mixta</p>
-              <p class="mt-5">Blanca</p>
-              <p class="mt-5">Fileto</p>
-            </div>
-            <div class="col-6 mt-5">
-              <!-- precios -->
-            </div>
-            <div class="col-6">
-              <!-- precios -->
-            </div>
-            <div class="col-6">
-              <h2 class="marco text-center">POSTRES</h2>
-              <p class="mt-5 text-end">Flan</p>
-              <p class="mt-5 text-end">Budín de pan</p>
-              <p class="mt-5 text-end">Helado</p>
-              <p class="mt-5 text-end">Ensalada de Frutas</p>
-              <p class="mt-5 text-end">Shot de Postres</p>
-              <p class="mt-5 text-end">Quesillo c/ Cayote</p>
-              <p class="mt-5 text-end">Batatita en Almíbar</p>
-              <p class="mt-5 text-end">Coreanito en Almíbar</p>
+            <div class="row fondo mt-3">
+              <h1 class="titulo mt-1 titulo2">Al plato</h1>
 
             </div>
+            <div class="row mt-5">
+              <!-- texto entrada -->
+              <div class="col-6">
+                <h2 class="marco  text-center">ENTRADAS</h2>
+              </div>
+              <!-- titulo empanada -->
+              <div class="col-12">
+                <h3 class="mt-3">Empanadas:</h3>
+              </div>
+              <!-- contenido de entradas -->
+              <div class="col-6 mt-5">
+                <p>Carne / Pollo</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Árabe / Queso</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div><div class="col-6 mt-5">
+                <p>Jamón y Queso</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div><div class="col-6 mt-5">
+                <p>Tamales</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div><div class="col-6 mt-5">
+                <p>Humitas Dulce / Saladas</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <!-- fin entradas -->
+              <!-- picadas -->
+              <div class="col-6"></div>
+              <div class="col-6 mt-5">
+                <h2 class="marco  text-center">PICADAS</h2>
+              </div>
+              <!-- contenido picadas -->
+              <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Árabe P/ 2 personas <br>Tripa Rellena <br> Niño Envuelto <br> Empanadas Árabes y Tabbule</p>
+              </div>
+
+              <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Tacos Mixtos c/4 Salsas</p>
+              </div>
+
+              <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Tabla de Fiambres</p>
+              </div>
+              <!-- fin picadas -->
+
+              <!-- Al plato -->
+              <div class="col-6 mt-5">
+                <h2 class="marco  text-center">AL PLATO</h2>
+              </div>
+                <div class="col-12"></div>
+              <!-- contenido de al plato -->
+              <div class="col-6 mt-5">
+                <p>Mila Completa</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Bife de lomo con fritas</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div><div class="col-6 mt-5">
+                <p>Napolitana c/ Guarnición</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div><div class="col-6 mt-5">
+                <p>Costillitas a la barbacoa c/ papas Bravas</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div><div class="col-6 mt-5">
+                <p>Bife de pollo c/Guarnición</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Lomo a la Frontera</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Lomo al Champignon</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Pollo al champignon</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Brochet Mixtos</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <!-- fin de al plato -->
+              <div class="col-6"></div>
+              <div class="col-6 mt-5">
+                <h2 class="marco  text-center">PASTAS</h2>
+              </div>
+              <!-- contenido Pastas -->
+              <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Tallarines</p>
+              </div>
+
+              <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Ravioles</p>
+              </div>
+
+              <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Sorrentinos</p>
+              </div>
+              <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Agnolottis</p>
+              </div> <div class="col-6 mt-5 ">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5 text-end">
+                <p>Ñoquis</p>
+              </div>
+              <!-- fin pastas -->
+              <!-- contenido salsas -->
+              <div class="col-6 mt-5">
+                <h2 class="marco  text-center">SALSAS</h2>
+              </div>
+              <div class="col-12">
+              </div>
+ 
+              <div class="col-6 mt-5">
+                <p>Bolognesa</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Mixtas</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div><div class="col-6 mt-5">
+                <p>Blanca</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Fileto</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <!-- fin de salsas -->
+              <!-- Postres -->
+              
+              <!-- fin postres -->
+
+
           </div>
         </div>
-
 
         <!-- pie de pagina -->
         <footer class="mt-5 container-fluid mb-5">
