--- a/menu-pizzamigo/web/postres.html
+++ b/menu-pizzamigo/web/postres.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/pizza.css">
+    <link rel="stylesheet" href="./css/postre.css">
     <title>Postres</title>
 </head>
 <body>
@@ -30,6 +32,15 @@
               </div>
             </div>
           </nav>
+          <!-- postres -->
+          <div class="cintainer-fluid texto text-light">
+            <div class="row fondo-postre mt-3">
+              <h2 class="titulo2">POSTRES</h2>
+
+            </div>
+
+          </div>
+          <!-- fin postres -->
 
           <!-- pie de pagina -->
           <footer class="mt-5 container-fluid mb-5">
