--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -13,6 +13,7 @@
 <body>
 
     <body>
+      <!-- menu hamburguesa -->
         <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
             <div class="container-fluid ">
               <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
@@ -24,7 +25,7 @@
                   <a class="nav-link text-light active" aria-current="page" href="index.html">Inicio</a>
                   <a class="nav-link text-light" href="pizza.html">Pizza</a>
                   <a class="nav-link text-light" href="#">Desayuno/Merienda</a>
-                  <a class="nav-link text-light" href="plato.html">Al plato</a>
+                  <a class="nav-link text-light" href="plato.html">Minutas</a>
                   <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
                   <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
                   <a class="nav-link text-light" href="postres.html">Postre</a>
@@ -32,62 +33,67 @@
               </div>
             </div>
           </nav>
+          <!-- fin de hamburguesa -->
+
+
           <div class="container-fluid text-light texto">
             <div class="row tablas mt-2">
                 <h1 class="text-end titulo2">TABLAS</h1>
             </div>
             <div class="row mt-5">
-              <div class="col-8"> 
+              <div class="col-7"> 
                 <h2 class="marco text-center">TRADICIONAL:</h2>
                 <p>Infusión + 2 Medialunas o Tortillas + Soda y Jugo</p>
               </div>
-              <div class="col-4">
+              <div class="col-5">
                 <!-- imagen del desayuno -->
+                <img  class="precio"src="../precio-sin-num.png" alt="" srcset="">
               </div>
             </div>
             <div class="row mt-5">
-              <div class="col-4">
+              <div class="col-5">
                 <!-- imagen del desayuno -->
               </div>
-              <div class="col-8 ">
+              <div class="col-7 ">
                 <h2 class="marco text-center">CONTINENTAL:</h2>
-                <p class="text-end">Infusión + Pan de campo + Manteca + Mermelada ó Dulce de Leche + Ens. de Fruta + Soda y Jugo.</p>
+                <p class="text-end">Infusión + Medialunas o Tortillas o Tostadas / Manteca, Mermelada o Dulce + Soda y Jugo </p>
               </div>
             </div>
+            <div class="col-12 text-center marco p-3" style="font-size: 1.3rem;">PROMO LICUADO + 1/2 TOSTADO</div>
             <div class="row mt-5">
-              <div class="col-8"> 
+              <div class="col-7"> 
                 <h2 class="marco text-center">AMERICANO:</h2>
-                <p>Infusión + 2 Pan de campo + Huevo Revuelto + Panceta + Ens. de Frutas + Soda y Jugo.</p>
+                <p class="text-center">Infusión + 3 Pan de Campo + Huevo c/ Panceta o Jamón + Porción de JYQ + Ens. Fruta + Soda y Jugo.</p>
               </div>
-              <div class="col-4">
+              <div class="col-5">
                 <!-- imagen del desayuno -->
               </div>
             </div>
             <div class="row mt-5">
-              <div class="col-4">
+              <div class="col-5">
                 <!-- imagen del desayuno -->
               </div>
-              <div class="col-8 ">
+              <div class="col-7 ">
                 <h2 class="marco text-center">PROTEICO:</h2>
                 <p class="text-end">Infusión + 2 Pan de Campo + Huevo Revuelto + Palta + Ens. de Fruta + Soda y Jugo</p>
               </div>
             </div>
             <div class="row mt-5">
-              <div class="col-8"> 
+              <div class="col-7"> 
                 <h2 class="marco text-center">Jamón y Queso:</h2>
                 <span>Infusión + 2 Medialunas de Jamón y Queso + Soda y Jugo</span>
               </div>
-              <div class="col-4">
+              <div class="col-5">
                 <!-- imagen del desayuno -->
               </div>
             </div>
             <div class="row mt-5">
-              <div class="col-4">
+              <div class="col-5">
                 <!-- imagen del desayuno -->
               </div>
-              <div class="col-8 ">
-                <h2 class="marco text-center">PARA COMPARTIR:</h2>
-                <p class="text-end"> 2 Infusión + 2 Medialunas + 4 Tostadas de Campo + Jámon y Queso + Mermelada + Manteca + 2 Ens. de Frutas + Soda y Jugo</p>
+              <div class="col-7 ">
+                <h2 class="marco text-center">COMBO AMERICANO:</h2>
+                <p class="text-center"> Americano p/ 2 personas</p>
               </div>
             </div>
             <!-- infusiones -->
