--- a/menu-pizzamigo/web/ensalada.html
+++ b/menu-pizzamigo/web/ensalada.html
@@ -22,7 +22,7 @@
              <a class="nav-link text-light active" aria-current="page" href="./index.html">Inicio</a>
              <a class="nav-link text-light" href="pizza.html">Pizza</a>
              <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
-             <a class="nav-link text-light" href="plato.html">Al plato</a>
+             <a class="nav-link text-light" href="plato.html">Minutas</a>
              <a class="nav-link text-light" href="#">Ensaladas</a>
              <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
              <a class="nav-link text-light" href="postres.html">Postre</a>
