--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -21,7 +21,7 @@
               <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
               <a class="nav-link text-light" href="pizza.html">Pizza</a>
               <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
-              <a class="nav-link text-light" href="plato.html">Al plato</a>
+              <a class="nav-link text-light" href="plato.html">Minutas</a>
               <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
               <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
               <a class="nav-link text-light" href="postres.html">Postre</a>
@@ -52,7 +52,7 @@
               <a href="plato.html"> <img class="redo" src="../Al plato.webp" alt="Al plato" srcset=""></a>
             </div>
             <div class="col-12 text-center text-light">
-                <span class="texto">Al plato</span>
+                <span class="texto">Minutas</span>
 
             </div>
             <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
