--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -22,7 +22,7 @@
                   <a class="nav-link text-light active" aria-current="page" href="index.html">Inicio</a>
                   <a class="nav-link text-light" href="pizza.html">Pizza</a>
                   <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
-                  <a class="nav-link text-light" href="#">Al plato</a>
+                  <a class="nav-link text-light" href="#">Minutas</a>
                   <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
                   <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
                   <a class="nav-link text-light" href="postres.html">Postre</a>
@@ -34,7 +34,7 @@
 
         <div class="container-fluid texto text-light">
             <div class="row fondo mt-3">
-              <h1 class="titulo mt-1 titulo2">Al plato</h1>
+              <h1 class="titulo mt-1 titulo2">Minutas</h1>
 
             </div>
             <div class="row mt-5">
@@ -156,6 +156,18 @@
               </div>
               <div class="col-6 mt-5">
                 <p>Brochet Mixtos</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Costeleta c/ Guarnición</p>
+              </div>
+              <div class="col-6 mt-5">
+                <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+              </div>
+              <div class="col-6 mt-5">
+                <p>Mila a Caballo</p>
               </div>
               <div class="col-6 mt-5">
                 <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
