--- a/menu-pizzamigo/web/postres.html
+++ b/menu-pizzamigo/web/postres.html
@@ -24,7 +24,7 @@
                   <a class="nav-link text-light active" aria-current="page" href="index.html">Inicio</a>
                   <a class="nav-link text-light" href="pizza.html">Pizza</a>
                   <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
-                  <a class="nav-link text-light" href="plato.html">Al plato</a>
+                  <a class="nav-link text-light" href="plato.html">Minutas</a>
                   <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
                   <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
                   <a class="nav-link text-light" href="#">Postre</a>
@@ -36,7 +36,12 @@
           <div class="cintainer-fluid texto text-light">
             <div class="row fondo-postre mt-3">
               <h2 class="titulo2">POSTRES</h2>
-
+            </div>
+            <div class="row mt-5">
+              <h1>esta pagina esta en desarrollo</h1>
+              <div class="col-6">
+                <p>porciones de tarta, helado</p>
+              </div>
             </div>
 
           </div>
